notejam/k8s/ingress-service.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-service
#   namespace: default
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: client-cluster-ip-service
#             port:
#               number: 8080
#       - path: /api
#         pathType: Prefix
#         backend:
#           service:
#             name: api-cluster-ip-service
#             port:
#               number: 3000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: simple-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: client-cluster-ip-service
#             port:
#               number: 8080
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: app.notejam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-cluster-ip-service
            port:
              number: 4000
